tests/NormalTests/paczka1/fuzzy1/27014016.err
Error in line 1: OGAO S492 45,4
Error in line 6: oST45Hf A971 67,4
Error in line 17: oST45Hf A129 13,9
Error in line 28: uCYDpE1 A129 124,8
Error in line 31: uCYDpE1 A837 4,08
Error in line 30: uCYDpE1 A971 84,2
Error in line 38: 0rx3 A129 85,99
